--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,13 @@
-<html>
-    <head></head>
+<!DOCTYPE html>
+<html lang='en'>
+    <head><title></title></head>
     <body>
         Chat App
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="/js/chat.js"></script>
+        <form id='message-form'>
+            <input name='message' placeholder='Message...'>
+            <button>Send</button>
+        </form>
+        <script src='/socket.io/socket.io.js'></script>
+        <script src='/js/chat.js'></script>
     </body>
 </html>
